# Solar

./: AGENTS.md  CMakeLists.txt  Makefile  TODO  camera.cpp  camera.h  input.cpp  input.h  physics.cpp  physics.h  profiling.cpp  profiling.h  render.cpp  render.h  solar.cpp  solar.h  vec2.h
include/: input.h  physics.h  profiling.h  render.h  solar.h  spawner.h
src/: camera.cpp  input.cpp  physics.cpp  profiling.cpp  render.cpp  solar.cpp  spawner.cpp
